Fix: align navbar

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -3,10 +3,6 @@
     align-items: center;
 }
 
-nav {
-    align-items: center;
-}
-
 .NavText {
     color: #f9f9f9 !important;
     padding: 6px;
